Feature: Implement Device Event Data in AS
