# python/src/chirpstack_api/as_pb/external/api/device_pb2_grpc.py
@@ -106,6 +106,11 @@ class DeviceServiceStub(object):
                 request_serializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusRequest.SerializeToString,
                 response_deserializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusResponse.FromString,
                 )
+        self.GetDeviceData = channel.unary_unary(
+                '/api.DeviceService/GetDeviceData',
+                request_serializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceDataRequest.SerializeToString,
+                response_deserializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceDataResponse.FromString,
+                )
 
 
 class DeviceServiceServicer(object):
@@ -244,6 +249,13 @@ class DeviceServiceServicer(object):
         context.set_details('Method not implemented!')
         raise NotImplementedError('Method not implemented!')
 
+    def GetDeviceData(self, request, context):
+        """GetDeviceData returns the device uplink data matching the given DevEUI.
+        """
+        context.set_code(grpc.StatusCode.UNIMPLEMENTED)
+        context.set_details('Method not implemented!')
+        raise NotImplementedError('Method not implemented!')
+
 
 def add_DeviceServiceServicer_to_server(servicer, server):
     rpc_method_handlers = {
@@ -336,6 +348,11 @@ def add_DeviceServiceServicer_to_server(servicer, server):
                     servicer.GetStatus,
                     request_deserializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusRequest.FromString,
                     response_serializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusResponse.SerializeToString,
+            ),
+            'GetDeviceData': grpc.unary_unary_rpc_method_handler(
+                    servicer.GetDeviceData,
+                    request_deserializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceDataRequest.FromString,
+                    response_serializer=chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceDataResponse.SerializeToString,
             ),
     }
     generic_handler = grpc.method_handlers_generic_handler(
@@ -651,5 +668,22 @@ class DeviceService(object):
         return grpc.experimental.unary_unary(request, target, '/api.DeviceService/GetStatus',
             chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusRequest.SerializeToString,
             chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceStatusResponse.FromString,
+            options, channel_credentials,
+            insecure, call_credentials, compression, wait_for_ready, timeout, metadata)
+
+    @staticmethod
+    def GetDeviceData(request,
+            target,
+            options=(),
+            channel_credentials=None,
+            call_credentials=None,
+            insecure=False,
+            compression=None,
+            wait_for_ready=None,
+            timeout=None,
+            metadata=None):
+        return grpc.experimental.unary_unary(request, target, '/api.DeviceService/GetDeviceData',
+            chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceDataRequest.SerializeToString,
+            chirpstack__api_dot_as__pb_dot_external_dot_api_dot_device__pb2.GetDeviceDataResponse.FromString,
             options, channel_credentials,
             insecure, call_credentials, compression, wait_for_ready, timeout, metadata)
